fix typo and add some docstring

--- a/pincell_msr_depletion.ipynb
+++ b/pincell_msr_depletion.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e7369122",
+   "id": "35d8b22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae5eb52",
+   "id": "c8bd9b84",
    "metadata": {},
    "source": [
     "Let's use the same material definition as the existing pincell depletion example "
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "55862ffe",
+   "id": "5e8bc3f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +59,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9031c8",
+   "id": "0ad13d88",
    "metadata": {},
    "source": [
-    "The geometry definition is going to be slightly different. Firstly, we want to bound the geometry in z assigning a pincell height. Secondly, we want to define a cell that contains a universe made of water and helium cells, separated by an interface, which we can initially set at -59 cm so that the $k_{eff} \\sim 1$. \n",
+    "The geometry definition is going to be slightly different. Firstly, we want to bound the geometry in `z` assigning a pincell height. Secondly, we want to define a cell that contains a universe made of water and helium cells, separated by an interface, which we can initially set at $-59\\ cm$ so that the initial condition of $k_{eff} \\sim 1$ is satisfied. \n",
     "\n",
-    "Filling the \"msr\" cell with a universe is the requirement to use the msr batchwise geometrical scheme as we will see later on.    "
+    "Filling the `msr` cell with a universe is the requirement to use the msr batchwise geometrical scheme as we will see later on.    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "e595144a",
+   "id": "054b7dc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "5646f64e",
+   "id": "a8497ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "e305e14a",
+   "id": "b70c247a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b94dca7a",
+   "id": "1806f12a",
    "metadata": {},
    "source": [
     "Let's plot the pincell. We can notice the initial interface between the borated water and helium cells."
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "3291dcb8",
+   "id": "099727c5",
    "metadata": {},
    "outputs": [
     {
@@ -170,16 +170,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76bd83bf",
+   "id": "3cdf7da0",
    "metadata": {},
    "source": [
-    "Let's now build and run a standard depletion calculation, increasing the thermal power to 100 kW. The results will be used as the reference to compare with the MSR capabilities:"
+    "Let's now build and run a standard depletion calculation, increasing the thermal power to $100\\ kW$. The results will be used as the reference to compare with the MSR capabilities:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "253c1a16",
+   "id": "c06870a6",
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +220,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f6d6994",
+   "id": "60f74ad4",
    "metadata": {},
    "source": [
-    "We can now analazie the depletion results"
+    "We can now analazie the depletion results:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "3093edbb",
+   "id": "5eb986a2",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f5e495",
+   "id": "e586b4b0",
    "metadata": {},
    "source": [
     "Let's now introduce the concept of `continuous removal rate` at which some nuclides/elements get removed from the materials, as an additional proportional term to the Bateman equations. This concept assumes first-order removal and homegeneous distributions of the fission products (or elements to removed) throughout the material.\n",
@@ -315,23 +315,29 @@
     "\n",
     "$T_{cyc,i} = \\frac{1}{\\lambda_i}$, as the time needed to process the removal elements at a specific volumetric rate. \n",
     "\n",
-    "Thus, a new depletion matrix can be built as: \n",
+    "For simplicity, we can combine $\\epsilon_i$ and $\\lambda_i$ in one single parameter, that we can call again $\\lambda_i$. Thus, setting a removal rate coefficient of, for example, $1\\ (s^{-1})$ at $100\\ \\%$ efficiency is the same as setting $10\\ (s^{-1})$ at $10\\ \\%$.\n",
     "\n",
-    "$\\frac{d\\vec{n}}{dt} = \\underbrace{(\\textbf{R+D-T})}_\\textbf{A}\\vec{n} $, where\n",
+    "A new depletion matrix can be built as: \n",
+    "\n",
+    "$\\frac{d\\vec{n}}{dt} = \\underbrace{(\\textbf{R+D-T})}_\\textbf{A}\\vec{n} $, \n",
+    "\n",
+    "where:\n",
+    "\n",
     "- $\\textbf{R}$ is the reaction rate term\n",
     "- $\\textbf{D}$ is the decay rate term \n",
     "- $\\textbf{T}$ is the removal rate or transfer term \n",
     "\n",
     "That can be solved in a similar fashion. \n",
     "\n",
-    "Back to our case, for sake of example, let's set a removal rate of $0.1 (s^{-1})$ for `Xenon` and re-run the the depletion model. \n",
-    "To do it, we need to instantiate a `openmc.deplete.msr.MsrContinuous` object first, and use the `set_removal_rate` function to set a removal rate to a list of elements (only Xe in this case) and the depletable material to remove from. Lastly, we need to pass our instance to the integrator object.    "
+    "Back to our case, let's set a removal rate of $0.1\\ (s^{-1})$ for `Xenon` and re-run the the depletion model. \n",
+    "\n",
+    "To do it, we just need to instantiate a `openmc.deplete.msr.MsrContinuous` object and use the `set_removal_rate` function to set a removal rate to a list of elements (only `Xe` in this case) and the depletable material to remove it from. Lastly, we need to pass our instance to the integrator object.    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "cf5338fa",
+   "id": "462cb2eb",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44db1463",
+   "id": "31f83dc5",
    "metadata": {},
    "source": [
     "Let's open the results and plot them again:"
@@ -382,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "92e1c862",
+   "id": "615fc466",
    "metadata": {},
    "outputs": [
     {
@@ -443,33 +449,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55159fe",
+   "id": "a2e1de3a",
    "metadata": {},
    "source": [
-    "As we can, `Xe135` capture rate has reduced indicating that the removal has worked, and consequently `keff` is kept almost constantly. "
+    "As we can notice, `Xe135` capture rate has reduced indicating that the removal has worked, and consequently `keff` is kept almost constantly. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d535fe35",
+   "id": "aad268bb",
    "metadata": {},
    "source": [
     "Let's now show the capability of the `batchwise`control instead. We want to apply single actions in time to the system to fulfill some objectives, such as maintain a certain level of criticality. The current MSR implementation allows the user to define `geometry-based`or `material-based`actions. \n",
     "\n",
-    "Back to our example, let's assume we want to maintain $k_{eff}$ close to its initial value $(\\sim 1.00 )$ during the whole depletion time, by dynamically increasing the quantity of borated water that acts as moderator and compensate for the neutrons capture of the fission products build-up. The `msr` cell that was previously defined and filled with an universe containing borated water and helium gas, can translate up and down, increasing and decreasing the borated water cell volume, respectively. The `geometry-based` algorithm will run a `search_for_keff` at every depletion time-step to find the new interface coefficient that fulfills the target condition.  \n",
+    "Back to our example, let's assume we want to maintain $k_{eff}$ close to its initial value $(\\sim 1.00 )$ during the whole depletion time, by dynamically increasing the quantity of borated water that acts as moderator and compensates for the neutrons capture of the fission products build-up. \n",
+    "\n",
+    "The `msr` cell that was previously defined and filled with an universe containing borated water and helium gas, can translate up and down, increasing and decreasing the borated water cell volume, respectively. The `geometry-based` algorithm will run a `search_for_keff` at every depletion time-step to find a new interface geometrical coefficient that fulfills the target condition.  \n",
     "\n",
     "Here we only need to instantiate  `openmc.deplete.msr.MsrBatchwiseGeom` object and set it up with the relevant arguments:\n",
-    "- axis=2 : we want the cell translation on the z-axis\n",
-    "- bracket=[-2,2]: we want to limit the `search_for_keff` to $\\pm2$ cm from the initial or previous iteration geometrical value. \n",
-    "- bracket_limit=[-100,100] : this sets the limit of the `search_for_keff` to our pincell height \n",
-    "- tol=0.01 : `search_for_keff` tolerance \n",
-    "- target=1.145 : `search_for_keff` target \n"
+    "\n",
+    "- $axis=\\ 2$ : sets the cell translation on the z-axis\n",
+    "- $bracket=\\ [-2,2]$: sets `search_for_keff` bracket to $\\pm2\\ cm$ from the initial or previous iteration geometrical value. \n",
+    "- $bracket\\ limit=\\ [-100,100]$ : sets the limit to the iterative adaptive bracket method to the pincell lower and upper bound.  \n",
+    "- $tol=\\ 0.01$ : sets `search_for_keff` tolerance \n",
+    "- $target=\\ 1.145$ : sets `search_for_keff` target \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "cbaeb143",
+   "id": "d188431f",
    "metadata": {},
    "outputs": [
     {
@@ -559,15 +568,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49784916",
+   "id": "896f8361",
    "metadata": {},
    "source": [
-    "By looking at the output, we notice that when the `search_for_keff` bracket goes off target, the method iteratively adapts it. "
+    "By looking at the output, we  can notice that when `search_for_keff` bracket goes off target, the method iteratively adapts it. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a462910a",
+   "id": "1ff79aaa",
    "metadata": {},
    "source": [
     "Again, let's analyse the results:"
@@ -576,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "5987c3fb",
+   "id": "130ef150",
    "metadata": {},
    "outputs": [
     {
@@ -637,16 +646,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e27a18",
+   "id": "adc798aa",
    "metadata": {},
    "source": [
-    "As we can notice, $k_{eff} \\sim 1$ even though `Xe135`(main absorber) hasn't been removed. This is achieved through water level raising only, as we can see by plotting the results stored in `msr_results.h5`"
+    "As we can see, $k_{eff} \\sim 1$ is kept, even though `Xe135`(main absorber) doesn't get removed (we didn't define any removal rates in this case). This is achieved through the water level raising only, as we can notice by plotting the results stored in `msr_results.h5`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "6160d4dd",
+   "id": "7d71a827",
    "metadata": {},
    "outputs": [
     {
@@ -676,14 +685,6 @@
     "ax.set_ylabel(\"Borated water level [cm]\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1c8a0ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
