fix typ and add description

--- a/msr_back_of_the_envelope.ipynb
+++ b/msr_back_of_the_envelope.ipynb
@@ -390,18 +390,25 @@
    "source": [
     "from math import exp\n",
     "\n",
+    "# Initial number of atoms U238\n",
     "n0=model().materials[0].get_nuclide_atoms()['U238']\n",
+    "# define 3 removal rates constant\n",
     "removal_rates = [0.0,0.0001,0.00001]\n",
     "times = [1,1,1] #days\n",
     "power = 0\n",
     "openmc_msr_calc = []\n",
     "back_of_envelop_calc = []\n",
+    "\n",
     "for i in removal_rates:\n",
     "    _openmc_msr_calc = []\n",
     "    _openmc_msr_calc.append(test_msr_transfer(model(), i, times, power))\n",
     "    _back_of_envelop_calc = []\n",
     "    _back_of_envelop_calc.append(n0)\n",
-    "    # Solving n=no*exp(-lambda*t)\n",
+    "    \n",
+    "    # Solving Bateman equation without decay not reaction rates terms:\n",
+    "    # dn/dt = -lambda*n(t), with general solution:\n",
+    "    # n=no*exp(-lambda*t)\n",
+    "    \n",
     "    for t in np.cumsum(times):\n",
     "        _n0 = n0\n",
     "        t_in_sec = t*3600*24\n",
